force-app/main/default/objects/Vendor_Management__c/Vendor_Management__c.object-meta.xml
<CustomObject>
    <label>Vendor Management</label>
    <nameField>
        <displayFormat>VR-{0}</displayFormat>
        <label>Vendor Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>