force-app/main/default/objects/Vendor_Management__c/fields/Avg_Turnover_per_month__c.field-meta.xml
<CustomField>
    <fullName>Avg_Turnover_per_month__c</fullName>
    <label>Avg Turnover per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>