force-app/main/default/objects/Vendor_Management__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <label>Vendor Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>