force-app/main/default/objects/Vendor_Management__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Vendor Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>